status/re/resources/0.1.0/macos/darwin-20.6.0/gnat=10.3.2/resources-0.1.0.yaml.log
Test ran at 2024-07-24 00:38:56.123378+00:00

SOLUTION:
resources=0.1.0: Utility library to handle project resources at run-time
Origin: commit a418da627ec3d18f50f60edaee41a2f47f173a0e from https://github.com/alire-project/resources.git
Properties:
   Author: Alire Team
   Description: Utility library to handle project resources at run-time
   License: MIT
   Maintainer: Fabien Chouteau <fabien.chouteau@gmail.com>
   Maintainers_Logins: Fabien-Chouteau
   Maintainers_Logins: mosteo
   Name: resources
   Tag: utils
   Version: 0.1.0
   Website: https://github.com/alire-project/resources


LOG:
Note: Deploying resources=0.1.0...
Note: Building resources/resources.gpr...
Setup
   [mkdir]        object directory for project Resources
   [mkdir]        library directory for project Resources
Compile
   [C]            whereami.c
   [Ada]          resources.adb
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/stdlib.h:62,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/cfac1e69-d1df-4b2d-b46f-18f8545ba38b/resources_0.1.0_a418da62/whereami/src/whereami.c:25:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of whereami.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/cfac1e69-d1df-4b2d-b46f-18f8545ba38b/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/cfac1e69-d1df-4b2d-b46f-18f8545ba38b/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/cfac1e69-d1df-4b2d-b46f-18f8545ba38b/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x102f24000
Call stack traceback locations:
0x10382c415 0x1034ffe83 0x103712df9 0x103713581 0x103673ac3 0x103671f99 0x10368e873 0x1036dadc1 0x1036d981a 0x10368e9b8 0x103672349 0x102f839c1 0x102f94578 0x102f9901c 0x10301f05c 0x10302a3b8 0x102f25605 0x102f28914


Warning: resources=0.1.0 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
